--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "next": "14.2.4",
+    "photoswipe": "^5.4.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-photoswipe-gallery": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
